--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,10 @@
+@import "https://js.arcgis.com/4.24/esri/themes/light/main.css";
 
-ex-map {
-  height: 100%;
+html, body {
   width: 100%;
+  height: 100%;
+}
+
+body {
+  margin: 0px;
 }
